deploy/k8s/svc-telemetry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-telemetry
spec:
  replicas: 2
  selector:
    matchLabels:
      app: svc-telemetry
  template:
    metadata:
      labels:
        app: svc-telemetry
    spec:
      containers:
        - name: svc-telemetry
          image: ghcr.io/uttambhatia/healthcarepatientengagement/svc-telemetry:latest
          ports:
            - containerPort: 8087
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8087
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8087
