deploy/k8s/svc-telemetry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-telemetry
spec:
  selector:
    app: svc-telemetry
  ports:
    - port: 80
      targetPort: 8087
